src/test/ui/generic-associated-types/issue-91139.migrate.stderr
error: expected identifier, found `<<`
  --> $DIR/issue-91139.rs:1:1
   |
LL | <<<<<<< HEAD
   | ^^ expected identifier

error: aborting due to previous error

